[gd_scene load_steps=5 format=3 uid="uid://ciwelvbmm1atu"]

[ext_resource type="Theme" uid="uid://cd5eiltads1i4" path="res://main_theme.tres" id="1_2moqm"]
[ext_resource type="Script" path="res://scripts/letra.gd" id="2_m5eg1"]
[ext_resource type="Texture2D" uid="uid://c4bjo644d7k65" path="res://sprites/cube.png" id="3_v8smn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuqia"]
size = Vector2(100, 100)

[node name="Letra" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1052.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2moqm")
script = ExtResource("2_m5eg1")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_v8smn")
centered = false

[node name="State" type="Label" parent="Sprite"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -12.0
offset_right = 20.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_uuqia")

[connection signal="body_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_body_entered"]
[connection signal="body_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_body_exited"]
[connection signal="mouse_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_mouse_entered"]
[connection signal="mouse_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_mouse_exited"]
